-
Bug
-
Resolution: Done
-
P4: Low
-
5.9.4
-
None
-
abc891ee7cf12ae3b359811883d674c61793cc1d
It's good but not wanted behaviour. qInstallMessageHandler documentation contains such snippet.
case QtFatalMsg:
fprintf(stderr, "Fatal: %s (%s:%u, %s)\n", localMsg.constData(), context.file, context.line, context.function);
abort();
Here is abort() used. But abort will be always called. It happens in qlogging.cpp qt_message_fatal function.
So qInstallMessageHandler documentation should be improved. Need to remove abort() and add QtFatalMsg explanation.
| For Gerrit Dashboard: QTBUG-66295 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 219635,2 | Documentation: don't suggest abort() in qInstallMessageHandler() | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |